NOJIRA Add workaround for build task bug
Not all files are generated during the first run. This commit simply
runs the build script twice in order to to work around this issue.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,6 +28,7 @@ build_script:
   - composer config version "$VERSION"
   - truncate -s 0 vendor/autoload.php
   - npx --no-install gulp build
+  - npx --no-install gulp build
 
 after_build:
   - zip -r "$ARTIFACT" . -x ".git*" -x "node_modules/*" -x "vendor/*/*"
