--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "browser-sync": "^2.24.3",
+    "del": "^5.1.0",
     "glob": "^7.1.4",
-    "gulp-clean-css": "^3.9.4",
+    "gulp-clean-css": "^4.3.0",
     "gulp-jshint": "^2.1.0",
     "gulp-rev-css-url": "^0.1.0",
-    "gulp-sourcemaps": "^2.6.4",
+    "gulp-sourcemaps": "^2.6.5",
     "jshint": "^2.9.5",
     "run-sequence": "^2.2.1"
   },
@@ -31,24 +32,23 @@
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.3.1",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-concat": "^2.6.1",
-    "gulp-copy": "0.0.2",
+    "gulp-copy": "^4.0.1",
     "gulp-cssnano": "^2.1.2",
-    "gulp-image": "^4.3.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-rev": "^8.1.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-uglify": "^1.5.4",
+    "gulp-image": "^6.1.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-rev": "^9.0.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-uglify": "^3.0.2",
     "import-glob-loader": "^1.1.0",
     "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "rev-del": "^1.0.5",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^8.0.2",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.4",
     "webpack-config-utils": "^2.3.1",
