--- a/package.json
+++ b/package.json
@@ -5,15 +5,7 @@
   "main": "Gulpfile.js",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "browser-sync": "^2.24.3",
-    "del": "^5.1.0",
-    "glob": "^7.1.4",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-jshint": "^2.1.0",
-    "gulp-rev-css-url": "^0.1.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "jshint": "^2.9.5",
-    "run-sequence": "^2.2.1"
+    "browser-sync": "^2.26.14"
   },
   "browserslist": [
     "> 1%",
@@ -31,28 +23,35 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
+    "del": "^5.1.0",
     "file-loader": "^4.0.0",
+    "glob": "^7.1.4",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-copy": "^4.0.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-image": "^6.1.0",
+    "gulp-jshint": "^2.1.0",
     "gulp-plumber": "^1.2.1",
-    "gulp-rename": "^2.0.0",
     "gulp-rev": "^9.0.0",
+    "gulp-rev-css-url": "^0.1.0",
     "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "import-glob-loader": "^1.1.0",
+    "jshint": "^2.12.0",
     "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "rev-del": "^1.0.5",
+    "rev-del": "^2.0.0",
     "sass-loader": "^8.0.2",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.4",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.6.0",
     "webpack-config-utils": "^2.3.1",
-    "webpack-dev-server": "^3.7.1",
+    "webpack-dev-server": "^3.11.2",
     "webpack-fix-style-only-entries": "^0.3.0",
     "webpack-manifest-plugin": "^2.0.4",
     "webpack-notifier": "^1.7.0"
